# audio-recorder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: audio_recorder.h  gui.h
src/: audio_recorder.cpp  gui.cpp  main.cpp
